2008-07-24  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Improve triggering
	  of attribute value completion.

2008-07-24  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: For
	  System.Drawing.Color names colours autocompletion entries, use a
	  block of the colour as the icon. Don't show system colours.

2008-07-23  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Implemented node
	  selection with the path bar using the new parser. Much more
	  reliable, but still breaks on selecting the node the caret's in.
	* gtk-gui/objects.xml, AspNetAddIn.mdp, Makefile.am: Removed
	  objects.xml.

2008-07-23  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.StateEngine/AspNetSpecialState.cs: Unneeded;
	  removed.
	* MonoDevelop.AspNet.StateEngine/AspNetFreeState.cs: Stubbed.
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Use the new XML
	  parser for ASP.NET completion.
	* gtk-gui/objects.xml, gtk-gui/gui.stetic, AspNetAddIn.mdp,
	  Makefile.am: Updated.
	* MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs: Fix tag prefix
	  auto-generation logic.
	* MonoDevelop.AspNet.Parser/CompilationUnitVisitor.cs: Don't fold
	  regions by default.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.AspNet.Deployment/WebDeployTarget.cs,
	  MonoDevelop.AspNet/AspNetAppProject.cs,
	  MonoDevelop.AspNet/AspNetAppProjectBinding.cs,
	  MonoDevelop.AspNet/AspNetAppProjectConfiguration.cs,
	  MonoDevelop.AspNet/AspNetToolboxNode.cs,
	  MonoDevelop.AspNet/XspParameters.cs: Moved serialization engine to
	  MonoDevelop.Core. Use new syntax for specifying attribute scope.

2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.AspNet.addin.xml: Added javascript mime type (Bug 400896
	  - Syntax Mode for Javascript).

2008-06-25  Michael Hutchinson <mhutchinson@novell.com> 
